gccida/g0/want_to_gcse_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1784:28: error: use of undeclared identifier 'machine_mode'
if ( general_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1788:7: error: use of undeclared identifier 'test_insn_14'
if ( !test_insn_14 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1791:30: error: invalid suffix 'xmode' on integer constant
v4 = gen_rtx_REG( *(short *)0xmode, 106); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1793:1: error: use of undeclared identifier 'test_insn_14'
test_insn_14 = make_insn_raw( v5); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1794:18: error: use of undeclared identifier 'test_insn_14'
v6 = ( rtunion *)test_insn_14; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1795:14: error: use of undeclared identifier 'test_insn_14'
*( _QWORD *)&test_insn_14[1] = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1796:1: error: use of undeclared identifier 'test_insn_14'
test_insn_14[1].fld[0] = v6[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1797:20: error: use of undeclared identifier 'test_insn_14'
ggc_add_rtx_root( &test_insn_14, 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1799:41: error: use of undeclared identifier 'test_insn_14'
*( _BYTE *)( *( _QWORD *)( *( _QWORD *)&test_insn_14[2] + 8LL) + 2LL) = *( ( _BYTE *)x + 2); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1800:28: error: use of undeclared identifier 'test_insn_14'
*( _QWORD *)( *( _QWORD *)&test_insn_14[2] + 16LL) = x; 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1801:26: error: use of undeclared identifier 'test_insn_14'
icode = recog( *( rtx *)&test_insn_14[2], test_insn_14, &num_clobbers); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/gcse.c:1801:43: error: use of undeclared identifier 'test_insn_14'
icode = recog( *( rtx *)&test_insn_14[2], test_insn_14, &num_clobbers); 
                                          ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/want_to_gcse_p/src/obj/gcse.o] Error 1
